# hftokenizers

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE-text.html  LICENSE.html  NAMESPACE  README.Rmd  README.md  _pkgdown.yml  authors.html  index.html  pkgdown.yml  sitemap.xml
.github/workflows/: R-CMD-check.yaml  pkgdown.yaml
R/: Encoding.R  Models.R  PreTokenizers.R  Processors.R  RTokenizerBuilder.R  Tokenizer.R  Trainers.R  extendr-wrappers.R  extendr.R  hello.R  hftokenizers.R
articles/: index.html  quicktour.html
man/: hftokenizers.Rd  make_wrappers.Rd  post_processors_template_processing.Rd  pre_tokenizers_whitespace.Rd  tokenizer.Rd  trainers_bpe.Rd
reference/: hftokenizers.html  index.html  make_wrappers.html  post_processors_template_processing.html  pre_tokenizers_whitespace.html  tokenizer.html  trainers_bpe.html
src/: Makevars  Makevars.win  entrypoint.c  entrypoint.cpp
src/rust/: Cargo.toml
src/rust/src/: decoders.rs  encoding.rs  lib.rs  models.rs  normalizers.rs  pre_tokenizers.rs  processors.rs  tokenizer.rs  trainers.rs
tests/: testthat.R
tests/testthat/: test-Models.R  test-Tokenizer.R  test-Trainers.R
vignettes/: quicktour.Rmd
