[package]
name = "hftokenizers"
version = "0.0.1"
authors = ["daniel-falbel <daniel@rstudio.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
extendr-api = "0.1.11"
tokenizers = {git = "https://github.com/huggingface/tokenizers"}

# Once extendr 0.1.11 is on crates.io the entire remaining part
# of this file can be deleted.
[patch.crates-io]
extendr-api = { git = "https://github.com/extendr/extendr" }
extendr-engine = { git = "https://github.com/extendr/extendr" }
extendr-macros = { git = "https://github.com/extendr/extendr" }
libR-sys = { git = "https://github.com/extendr/libR-sys" }

