[package]
name = "hftokenizers"
version = "0.0.1"
authors = ["daniel-falbel <daniel@rstudio.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
extendr-api = "0.2.0"
# use a pre-"TruncationDirection" in encoding.rs commit
tokenizers = {git = "https://github.com/huggingface/tokenizers", rev = "256a71c"}
serde = { version = "1.0", features = [ "rc", "derive" ]}

# Once extendr 0.1.11 is on crates.io the entire remaining part
# of this file can be deleted.
[patch.crates-io]
extendr-api = { git = "https://github.com/extendr/extendr" }
extendr-engine = { git = "https://github.com/extendr/extendr" }
extendr-macros = { git = "https://github.com/extendr/extendr" }
libR-sys = { git = "https://github.com/extendr/libR-sys" }

